# fastapi-oauth-mongo-react-starter

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  env-template  requirements.txt
.github/workflows/: pre-commit.yaml  test.yaml
backend/: main.py  pyproject.toml
backend/app/: factory.py
backend/app/api/: __init__.py  items.py  users.py  utils.py
backend/app/core/: config.py
backend/app/models/: item.py  user.py
backend/app/schemas/: item.py  request_params.py  user.py
backend/tests/: conftest.py  utils.py
backend/tests/api/: test_items.py
backend/tests/models/: test_user.py
frontend/: package.json
frontend/cypress/e2e/: app.cy.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: Auth.tsx
frontend/src/pages/: Dashboard.test.tsx  Dashboard.tsx  OAuthCallback.tsx
frontend/src/providers/: env.ts
